--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "author": "CALA <devops@ca.la>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "0.8.7",
+    "bluebird": "3.4.6",
     "co-body": "4.2.0",
     "knex": "0.12.6",
     "koa": "1.2.4",
     "koa-router": "5.4.0",
+    "lodash": "4.16.6",
     "node-uuid": "1.4.7",
     "pg": "6.1.0",
     "pg-rethrow": "1.0.1"
