--- a/circle.yml
+++ b/circle.yml
@@ -8,3 +8,8 @@ test:
   pre:
     - $(npm bin)/knex migrate:latest
 
+deployment:
+  production:
+    branch: master
+    heroku:
+      appname: cala-api-prod
