--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "0.8.7",
     "bluebird": "3.4.6",
     "co-body": "4.2.0",
+    "form-data": "2.1.2",
     "knex": "0.12.6",
     "koa": "1.2.4",
     "koa-router": "5.4.0",
