--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "REST",
   "main": "index.js",
   "author": "CALA <devops@ca.la>",
-  "license": "MIT",
+  "license": "UNLICENSED",
+  "private": true,
   "dependencies": {
     "bcrypt": "0.8.7",
     "bluebird": "3.4.6",
