--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "aws-sdk": "2.7.21",
     "bcrypt": "0.8.7",
     "bluebird": "3.4.6",
     "co-body": "4.2.0",
