--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "3.4.6",
     "co-body": "4.2.0",
     "form-data": "2.1.2",
+    "google-libphonenumber": "2.0.9",
     "knex": "0.12.6",
     "koa": "1.2.4",
     "koa-multer": "0.0.2",
