--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ machine:
   environment:
     DATABASE_URL: postgres://ubuntu:@127.0.0.1:5432/circle_test
   node:
-    version: 8.*
+    version: 8.2.1
 
 test:
   pre:
