move back to post

--- a/circle.yml
+++ b/circle.yml
@@ -3,9 +3,7 @@ machine:
     DATABASE_URL: postgres://ubuntu:@127.0.0.1:5432/circle_test
   node:
     version: 8.2.1
-
-dependencies:
-  pre:
+  post:
     - npm install -g npm
 
 test:
