--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-multer": "0.0.2",
     "koa-router": "5.4.0",
     "lodash": "4.16.6",
+    "mime-types": "2.1.17",
     "node-fetch": "1.6.3",
     "node-uuid": "1.4.7",
     "pg": "6.1.0",
