--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,12 @@
     "import/no-extraneous-dependencies": [2, {"devDependencies": true}],
     "arrow-body-style": 0,
     "comma-dangle": [2, "never"],
-    "no-console": 2
+    "no-console": 2,
+    "no-restricted-syntax": [
+      "error",
+      "ForInStatement",
+      "LabeledStatement",
+      "WithStatement"
+    ]
   }
 }
