--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,9 @@ jobs:
           name: Deploy to Heroku
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              bin/validate-deployment-readiness staging
+              $(npm bin)/validate-deployment-readiness staging
               git push https://heroku:$HEROKU_API_KEY@git.heroku.com/cala-api-stg.git HEAD:refs/heads/master
             elif [ "${CIRCLE_BRANCH}" == "production" ]; then
-              bin/validate-deployment-readiness production
+              $(npm bin)/validate-deployment-readiness production
               git push https://heroku:$HEROKU_API_KEY@git.heroku.com/cala-api-prod.git HEAD:refs/heads/master
             fi
