--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
       "ForInStatement",
       "LabeledStatement",
       "WithStatement"
-    ]
+    ],
+    "eqeqeq": ["error", "always"]
   }
 }
