Upgrade eslint, add new rules (#224)
I wanted to use the `"no-unused-vars": [2, { "args": "after-used" }]`
eslint configuration — I could have sworn we have a similar effect
already re: not complaining about missing arguments, but maybe in
another codebase.

That required upgrading eslint, which required upgrading the sibling
dependencies (airbnb, plugin-import). That broke a whole bunch of stuff,
but with some light rule tweaking and a heavy dose of `--fix`, the code
is now in a state that I'm more or less OK with.

We can always tweak these later, it seems like `eslint --fix` has
improved a lot since I first used it.

--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   },
   "devDependencies": {
     "@cala/bin": "1.3.3",
-    "eslint": "3.9.1",
-    "eslint-config-airbnb-base": "10.0.1",
-    "eslint-plugin-import": "2.2.0",
+    "eslint": "^5.0.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
     "sinon": "1.17.6",
     "tap-spec": "4.1.1",
     "tape": "4.6.2"
