--- a/.eslintrc
+++ b/.eslintrc
@@ -7,8 +7,13 @@
     "import/no-extraneous-dependencies": [2, {"devDependencies": true}],
     "arrow-body-style": 0,
     "no-underscore-dangle": 0,
+    "no-unused-vars": [2, { "args": "after-used" }],
+    "no-await-in-loop": 0,
     "comma-dangle": [2, "never"],
+    "operator-linebreak": [2, "after"],
+    "implicit-arrow-linebreak": 0,
     "no-console": 2,
+    "function-paren-newline": [2, "consistent"],
     "no-restricted-syntax": [
       "error",
       "ForInStatement",
