--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@types/knex": "^0.14.17",
     "@types/lodash": "^4.14.112",
     "@types/node": "10.3.1",
     "aws-sdk": "2.7.21",
@@ -31,9 +32,11 @@
     "zipcodes": "2.1.0"
   },
   "devDependencies": {
-    "@cala/bin": "^1.4.2",
+    "@cala/bin": "^1.4.3",
+    "@types/tape": "^4.2.32",
     "eslint": "^5.0.1",
     "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-import-resolver-typescript": "^1.0.2",
     "eslint-plugin-import": "^2.13.0",
     "sinon": "1.17.6",
     "tap-spec": "4.1.1",
