--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,12 @@
     "module": "commonjs",
     "target": "es6",
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "types": ["node"]
+    "types": ["node", "utils"]
   },
   "include": [
     "./src/**/*"
+  ],
+  "exclude": [
+    "./src/scripts/**/*"
   ]
 }
