--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@types/knex": "^0.14.18",
+    "@types/http-assert": "^1.3.0",
+    "@types/knex": "^0.14.20",
     "@types/lodash": "^4.14.112",
     "@types/node": "10.3.1",
     "@types/node-uuid": "0.0.28",
