--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "lib": ["es2015", "es2016"],
+    "lib": ["es2017"],
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
