--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "6.1.0",
     "pg-rethrow": "1.0.1",
     "probe-image-size": "4.0.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.9.2",
     "typescript": "2.9.1",
@@ -42,8 +43,7 @@
     "eslint-plugin-import": "^2.13.0",
     "sinon": "1.17.6",
     "tap-spec": "4.1.1",
-    "tape": "4.6.2",
-    "ts-node": "^7.0.0"
+    "tape": "4.6.2"
   },
   "engines": {
     "node": "8.*",
