--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
   },
   "devDependencies": {
     "@cala/bin": "^1.5.1",
+    "@types/sinon": "^5.0.1",
     "eslint": "^5.0.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-import-resolver-typescript": "^1.0.2",
     "eslint-plugin-import": "^2.13.0",
-    "sinon": "1.17.6",
+    "sinon": "^6.1.5",
     "tap-spec": "4.1.1",
     "tape": "4.6.2"
   },
