--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "eslint-import-resolver-typescript": "^1.0.2",
     "eslint-plugin-import": "^2.13.0",
     "sinon": "^6.1.5",
-    "tap-spec": "4.1.1",
+    "tap-difflet": "^0.7.1",
+    "tap-xunit": "^2.3.0",
     "tape": "4.6.2"
   },
   "engines": {
