--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,4 +47,5 @@ jobs:
             elif [ "${CIRCLE_BRANCH}" == "production" ]; then
               $(npm bin)/cala-validate-deployment-readiness production dist/migrations
               git push https://heroku:$HEROKU_API_KEY@git.heroku.com/cala-api-prod.git HEAD:refs/heads/master
+              git push https://heroku:$HEROKU_API_KEY@git.heroku.com/cala-api-demo.git HEAD:refs/heads/master
             fi
