--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@types/lodash": "^4.14.112",
     "@types/node": "10.3.1",
     "@types/node-uuid": "0.0.28",
-    "@types/sinon": "^5.0.1",
-    "@types/tape": "^4.2.32",
     "aws-sdk": "2.7.21",
     "bcrypt": "2.0.1",
     "co-body": "4.2.0",
@@ -38,6 +36,8 @@
   },
   "devDependencies": {
     "@cala/bin": "^1.5.5",
+    "@types/sinon": "^5.0.1",
+    "@types/tape": "^4.2.32",
     "eslint": "^5.0.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-import-resolver-typescript": "^1.0.2",
@@ -52,7 +52,7 @@
     "npm": "5.7.*"
   },
   "scripts": {
-    "start": "make serve",
+    "start": "make serve-built",
     "test": "make lint && make test"
   }
 }
