--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/lodash": "^4.14.112",
     "@types/node": "10.3.1",
     "@types/node-uuid": "0.0.28",
-    "aws-sdk": "2.7.21",
+    "aws-sdk": "^2.302.0",
     "bcrypt": "2.0.1",
     "co-body": "4.2.0",
     "form-data": "2.1.2",
