Combine all migration/rollback scripts into one (#304)
* Combine all migration/rollback scripts into one

Usage: `bin/migrate <host> [rollback]`

e.g:

- `bin/migrate local` -> migrate local DB
- `bin/migrate local rollback` -> rollback local db
- `bin/migrate staging` -> migrate staging DB
- ... etc

* Remove confirmation step from LOCAL

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
 
       - run: make lint-ci
       - run: make build
-      - run: bin/migrate-local && bin/rollback-local && bin/migrate-local
+      - run: bin/migrate local && bin/migrate local rollback && bin/migrate local
       - run:
           command: make test-ci
           when: always
