--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/http-assert": "^1.3.0",
     "@types/knex": "^0.14.24",
     "@types/lodash": "^4.14.112",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "10.3.1",
     "@types/node-uuid": "0.0.28",
     "aws-sdk": "^2.302.0",
