Handle measurement error appropriately (4xx) (#372)
https://www.pivotaltracker.com/story/show/162130183

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "module": "commonjs",
     "target": "es6",
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "types": ["node", "utils", "koa", "koa-router"]
+    "types": ["node", "utils", "koa", "koa-router", "pg-rethrow"]
   },
   "include": [
     "./src/**/*"
