--- a/package.json
+++ b/package.json
@@ -37,12 +37,16 @@
   },
   "devDependencies": {
     "@cala/bin": "^1.5.6",
+    "@types/csv-parse": "^1.1.11",
+    "@types/meow": "^5.0.0",
     "@types/sinon": "^5.0.1",
     "@types/tape": "^4.2.32",
+    "csv-parse": "^4.2.0",
     "eslint": "^5.0.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-import-resolver-typescript": "^1.0.2",
     "eslint-plugin-import": "^2.13.0",
+    "meow": "^5.0.0",
     "sinon": "^6.1.5",
     "tap-difflet": "^0.7.1",
     "tap-xunit": "^2.3.0",
