--- a/package.json
+++ b/package.json
@@ -59,7 +59,13 @@
     "npm": "5.7.*"
   },
   "scripts": {
-    "start": "make serve-built",
-    "test": "make lint && make test"
+    "lint": "docker-compose run --rm typescript bin/lint",
+    "migrate-local": "docker-compose -f docker-compose.yml -f docker-compose.test.yml run --rm test bin/migrate local && docker-compose run --rm api bin/migrate local",
+    "rollback-local": "docker-compose -f docker-compose.yml -f docker-compose.test.yml run --rm test bin/migrate local rollback && docker-compose run --rm api bin/migrate local rollback",
+    "prerelease": "npm run lint && npm run test",
+    "release": "cala-release",
+    "start": "docker-compose up --build",
+    "tt": "bin/tt",
+    "test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml run --rm test bin/test"
   }
 }
