--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/http-assert": "^1.3.0",
     "@types/knex": "^0.14.24",
+    "@types/koa-compress": "^2.0.8",
     "@types/lodash": "^4.14.112",
     "@types/mime-types": "^2.1.0",
     "@types/node": "10.3.1",
@@ -21,6 +22,7 @@
     "google-libphonenumber": "2.0.9",
     "knex": "^0.15.2",
     "koa": "^1.6.2",
+    "koa-compress": "^1.0.9",
     "koa-multer": "0.0.2",
     "koa-router": "5.4.0",
     "lodash": "^4.17.11",
