Fix tasks by user endpoint and findUserDesigns function (#462)
* change get tasks by user id to actually get the correct tasks, add index on task_events.created_at

* correct unit tests for get tasks by user id

* add unit tests to find user designs, refactor generator

* add user creation to generator

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "release": "cala-release",
     "start": "make serve-built",
     "tt": "bin/tt",
-    "test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml run test bin/test"
+    "test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml run test bin/test",
+    "psql": "docker-compose run postgres psql postgres://postgres@postgres:5432/cala"
   }
 }
