Fix infrastructure scripts (#472)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "target": "es6",
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "typeRoots": ["./src/types", "./node_modules/@types"],
     "types": ["node", "utils", "koa", "koa-router", "pg-rethrow"]
   },
   "include": [
