--- a/package.json
+++ b/package.json
@@ -63,27 +63,26 @@
   },
   "scripts": {
     "clean": "rm -rf ./dist && mkdir -p ./dist",
+    "prebuild": "npm run clean",
     "build": "tsc",
-    "watch:typescript": "tsc -w -p .",
+    "watch:typescript": "tsc --preserveWatchOutput -w -p .",
     "watch:server": "nodemon --delay 2 -w ./dist dist",
-    "dev": "env $(cat .env | xargs -d '\\n') npm-run-all clean build --parallel watch:*",
+    "dev": "env $(cat .env | xargs -d '\\n') npm-run-all build --parallel watch:*",
     "console": "env $(cat .env | xargs -d '\\n') node",
-    "prerelease": "npm-run-all clean lint test",
+    "prerelease": "npm run test",
     "release": "cala-release",
     "script": "bin/run",
     "prestart": "stat dist > /dev/null",
     "start": "env $(cat .env | xargs -d '\\n') node dist",
-    "migration:validate": "cala-validate-migration",
+    "migration:validate": "env $(cat .env .test.env | xargs -d '\\n') cala-validate-migration",
     "migration:create": "bin/create-migration",
-    "premigration:run:local": "npm-run-all clean build",
     "migration:run:local": "env $(cat .env | xargs -d '\\n') bin/migrate local",
-    "premigration:run:test": "npm-run-all clean build",
     "migration:run:test": "env $(cat .env .test.env | xargs -d '\\n') bin/migrate local",
     "migration:run:staging": "bin/migrate staging",
     "migration:run:production": "bin/migrate production",
     "lint": "bin/lint",
     "tt": "bin/tt",
-    "pretest": "npm-run-all clean build lint",
+    "pretest": "npm-run-all build lint",
     "test": "bin/test"
   }
 }
