--- a/package.json
+++ b/package.json
@@ -71,18 +71,18 @@
     "console": "env $(cat .env | xargs -d '\\n') node",
     "prerelease": "npm run test",
     "release": "cala-release",
-    "script": "bin/run",
+    "script": "env $(cat .env | xargs -d '\\n') bin/run",
     "prestart": "stat dist > /dev/null",
     "start": "env $(cat .env | xargs -d '\\n') node dist",
     "migration:validate": "env $(cat .env .test.env | xargs -d '\\n') cala-validate-migration",
     "migration:create": "bin/create-migration",
     "migration:run:local": "env $(cat .env | xargs -d '\\n') bin/migrate local",
     "migration:run:test": "env $(cat .env .test.env | xargs -d '\\n') bin/migrate local",
-    "migration:run:staging": "bin/migrate staging",
-    "migration:run:production": "bin/migrate production",
+    "migration:run:staging": "env $(cat .env | xargs -d '\\n') bin/migrate staging",
+    "migration:run:production": "env $(cat .env | xargs -d '\\n') bin/migrate production",
     "lint": "bin/lint",
-    "tt": "bin/tt",
+    "tt": "env $(cat .env .test.env | xargs -d '\\n') bin/tt",
     "pretest": "npm-run-all build lint",
-    "test": "bin/test"
+    "test": "env $(cat .env .test.env | xargs -d '\\n') bin/test"
   }
 }
