Add credit system (#553)
Part 1 of https://www.pivotaltracker.com/story/show/163984048 — not
actually applied to quotes/transactions yet

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "migration:validate": "env $(cat .env .test.env | xargs -d '\\n') cala-validate-migration",
     "migration:create": "bin/create-migration",
     "migration:run:local": "env $(cat .env | xargs -d '\\n') bin/migrate local && SKIP_BUILD=true npm run migration:run:test",
+    "migration:rollback:local": "env $(cat .env | xargs -d '\\n') bin/migrate local rollback && SKIP_BUILD=true npm run migration:run:test rollback",
     "migration:run:test": "env $(cat .env .test.env | xargs -d '\\n') bin/migrate local",
     "migration:run:staging": "env $(cat .env | xargs -d '\\n') bin/migrate staging",
     "migration:run:production": "env $(cat .env | xargs -d '\\n') bin/migrate production",
