--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
           keys:
           - v3-dependencies-{{ checksum "package-lock.json" }}
 
+      - run: echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
       - run: npm ci
 
       - save_cache:
