--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "meow": "^5.0.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
+    "nyc": "^13.3.0",
     "sinon": "^6.1.5",
     "tap-difflet": "^0.7.1",
+    "tap-spec": "^5.0.0",
     "tap-xunit": "^2.3.0",
     "tape": "4.6.2"
   },
@@ -85,6 +87,21 @@
     "lint": "bin/lint",
     "tt": "env $(cat .env .test.env | xargs -d '\\n') bin/tt",
     "pretest": "npm-run-all build lint",
-    "test": "env $(cat .env .test.env | xargs -d '\\n') bin/test"
+    "test": "env $(cat .env .test.env | xargs -d '\\n') bin/test",
+    "coverage": "env $(cat .env .test.env | xargs -d '\\n') npx nyc tape \"dist/**/*spec.js\" | npx tap-spec"
+  },
+  "nyc": {
+    "all": true,
+    "exclude": [
+      "**/*spec.*",
+      "coverage/**",
+      "dist/migrations/**",
+      "src/migrations/**",
+      "src/test-helpers/**"
+    ],
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ]
   }
 }
