--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.9.2",
     "typescript": "2.9.1",
+    "xstate": "4.3.3",
     "zipcodes": "2.1.0"
   },
   "devDependencies": {
