--- a/package.json
+++ b/package.json
@@ -76,9 +76,9 @@
     "prerelease": "npm run test",
     "release": "cala-release",
     "script": "env $(cat .env | xargs -d '\\n') bin/run",
-    "script:stg": "env $(heroku config -s -a cala-api-stg | xargs -d '\\n') bin/run",
-    "script:prod": "env $(heroku config -s -a cala-api-prod | xargs -d '\\n') bin/run",
-    "script:demo": "env $(heroku config -s -a cala-api-demo | xargs -d '\\n') bin/run",
+    "script:stg": "env $(heroku config -s -a cala-api-stg | xargs -d '\\n') DATABASE_URL=$(heroku config:get DATABASE_URL -a cala-api-stg)?ssl=true bin/run",
+    "script:prod": "env $(heroku config -s -a cala-api-prod | xargs -d '\\n') DATABASE_URL=$(heroku config:get DATABASE_URL -a cala-api-prod)?ssl=true bin/run",
+    "script:demo": "env $(heroku config -s -a cala-api-demo | xargs -d '\\n') DATABASE_URL=$(heroku config:get DATABASE_URL -a cala-api-demo)?ssl=true bin/run",
     "prestart": "stat dist > /dev/null",
     "start": "env $(cat .env | xargs -d '\\n') node dist",
     "migration:validate": "env $(cat .env .test.env | xargs -d '\\n') cala-validate-migration",
