--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "build": "tsc",
     "watch:typescript": "tsc --preserveWatchOutput -w -p .",
     "watch:server": "nodemon --delay 2 -w ./dist dist",
-    "dev": "npm run loadenv npm-run-all build --parallel watch:*",
-    "console": "npm run loadenv node",
+    "dev": "npm run loadenv -- npm-run-all build --parallel watch:*",
+    "console": "npm run loadenv -- node",
     "prerelease": "npm run test",
     "release": "cala-release",
     "loadenv": "eval $(cat .env | xargs -d '\n')",
@@ -80,24 +80,24 @@
     "loadenv:stg": "eval $(heroku config -s -a cala-api-stg | xargs -d '\n') DATABASE_URL=$(heroku config:get DATABASE_URL -a cala-api-stg)?ssl=true",
     "loadenv:prod": "eval $(heroku config -s -a cala-api-prod | xargs -d '\n') DATABASE_URL=$(heroku config:get DATABASE_URL -a cala-api-prod)?ssl=true",
     "loadenv:demo": "eval $(heroku config -s -a cala-api-demo | xargs -d '\n') DATABASE_URL=$(heroku config:get DATABASE_URL -a cala-api-demo)?ssl=true",
-    "script": "npm run loadenv bin/run",
-    "script:stg": "npm run loadenv:stg bin/run",
-    "script:prod": "npm run loadenv:prod bin/run",
-    "script:demo": "npm run loadenv:demo bin/run",
+    "script": "npm run loadenv -- bin/run",
+    "script:stg": "npm run loadenv:stg -- bin/run",
+    "script:prod": "npm run loadenv:prod -- bin/run",
+    "script:demo": "npm run loadenv:demo -- bin/run",
     "prestart": "stat dist > /dev/null",
-    "start": "npm run loadenv node dist",
-    "migration:validate": "npm run loadtestenv cala-validate-migration",
+    "start": "npm run loadenv -- node dist",
+    "migration:validate": "npm run loadtestenv -- cala-validate-migration",
     "migration:create": "bin/create-migration",
-    "migration:run:local": "npm run loadenv bin/migrate local && SKIP_BUILD=true npm run migration:run:test",
-    "migration:rollback:local": "npm run loadenv bin/migrate local rollback && SKIP_BUILD=true npm run migration:run:test rollback",
-    "migration:run:test": "npm run loadtestenv bin/migrate local",
-    "migration:run:staging": "npm run loadenv bin/migrate staging",
-    "migration:run:production": "npm run loadenv bin/migrate production",
+    "migration:run:local": "npm run loadenv -- bin/migrate local && SKIP_BUILD=true npm run migration:run:test",
+    "migration:rollback:local": "npm run loadenv -- bin/migrate local rollback && SKIP_BUILD=true npm run migration:run:test rollback",
+    "migration:run:test": "npm run loadtestenv -- bin/migrate local",
+    "migration:run:staging": "npm run loadenv -- bin/migrate staging",
+    "migration:run:production": "npm run loadenv -- bin/migrate production",
     "lint": "bin/lint",
-    "tt": "npm run loadtestenv bin/tt",
+    "tt": "npm run loadtestenv -- bin/tt",
     "pretest": "npm-run-all build lint",
-    "test": "npm run loadtestenv bin/test",
-    "coverage": "npm run loadtestenv npx nyc tape \"dist/**/*spec.js\" | npx tap-spec"
+    "test": "npm run loadtestenv -- bin/test",
+    "coverage": "npm run loadtestenv -- npx nyc tape \"dist/**/*spec.js\" | npx tap-spec"
   },
   "nyc": {
     "all": true,
