--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@cala/ts-lib": "^0.4.2",
+    "@cala/ts-lib": "^0.6.0",
     "@types/http-assert": "^1.3.0",
     "@types/knex": "^0.14.24",
     "@types/koa-compress": "^2.0.8",
     "@types/lodash": "^4.14.112",
     "@types/mime-types": "^2.1.0",
     "@types/node": "10.3.1",
+    "@types/node-fetch": "^2.3.3",
     "@types/node-uuid": "0.0.28",
     "aws-sdk": "^2.302.0",
     "bcrypt": "2.0.1",
