--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.3.0",
+    "prettier": "^1.17.1",
     "sinon": "^6.1.5",
     "tap-difflet": "^0.7.1",
     "tap-spec": "^5.0.0",
