--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dd-trace": "^0.7.2",
     "form-data": "2.1.2",
     "google-libphonenumber": "2.0.9",
+    "hashids": "^1.2.2",
     "knex": "^0.15.2",
     "koa": "^1.6.2",
     "koa-compress": "^1.0.9",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@cala/bin": "^2.0.0",
     "@types/csv-parse": "^1.1.11",
+    "@types/hashids": "^1.0.30",
     "@types/meow": "^5.0.0",
     "@types/sinon": "^5.0.1",
     "@types/tape": "^4.2.32",
