--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@cala/ts-lib": "^0.13.0",
+    "@cala/ts-lib": "^0.14.1",
     "@types/http-assert": "^1.3.0",
     "@types/knex": "^0.14.24",
     "@types/koa-compress": "^2.0.8",
@@ -30,7 +30,7 @@
     "koa-multer": "0.0.2",
     "koa-router": "5.4.0",
     "lodash": "^4.17.13",
-    "mime-types": "2.1.21",
+    "mime-types": "^2.1.21",
     "node-fetch": "1.6.3",
     "node-uuid": "1.4.7",
     "pg": "^7.4.3",
