Cast to `PhidiasNode` to allow for new version of ts-lib (#962)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
+    "preserveSymlinks": true,
     "strict": true,
     "strictNullChecks": true,
     "module": "commonjs",
