--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "@types/koa-compress": "^2.0.8",
     "@types/lodash": "^4.14.112",
     "@types/mime-types": "^2.1.0",
-    "@types/node": "10.3.1",
+    "@types/node": "^10.17.5",
     "@types/node-fetch": "^2.3.3",
     "@types/node-uuid": "0.0.28",
     "@types/pg": "^7.4.14",
     "aws-sdk": "^2.302.0",
     "bcrypt": "2.0.1",
     "co-body": "4.2.0",
-    "dd-trace": "^0.7.2",
     "form-data": "2.1.2",
     "google-libphonenumber": "2.0.9",
     "hashids": "^1.2.2",
@@ -39,7 +38,7 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.9.2",
-    "typescript": "2.9.1",
+    "typescript": "^3.4.5",
     "xstate": "4.3.3",
     "zipcodes": "2.1.0"
   },
