--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "knex": "^0.15.2",
     "koa": "^1.6.2",
     "koa-compress": "^1.0.9",
+    "koa-convert": "^1.2.0",
     "koa-multer": "0.0.2",
     "koa-router": "5.4.0",
     "lodash": "^4.17.13",
