--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@cala/ts-lib": "^1.5.0",
     "@types/http-assert": "^1.3.0",
     "@types/knex": "^0.14.24",
+    "@types/koa": "^2.0.52",
     "@types/koa-compress": "^2.0.8",
     "@types/lodash": "^4.14.112",
     "@types/mime-types": "^2.1.0",
