--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@cala/ts-lib": "^1.5.0",
+    "@types/graphql-iso-date": "^3.3.3",
     "@types/http-assert": "^1.3.0",
     "@types/knex": "^0.14.24",
     "@types/koa": "^2.0.52",
@@ -18,11 +19,13 @@
     "@types/node-fetch": "^2.3.3",
     "@types/node-uuid": "0.0.28",
     "@types/pg": "^7.4.14",
+    "apollo-server-koa": "^2.9.9",
     "aws-sdk": "^2.302.0",
     "bcrypt": "2.0.1",
     "co-body": "4.2.0",
     "form-data": "2.1.2",
     "google-libphonenumber": "2.0.9",
+    "graphql-iso-date": "^3.6.1",
     "hashids": "^1.2.2",
     "knex": "^0.15.2",
     "koa": "^1.6.2",
