--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@cala/ts-lib": "^1.5.0",
+    "@shopify/koa-shopify-auth": "^3.1.49",
     "@types/graphql-iso-date": "^3.3.3",
     "@types/http-assert": "^1.3.0",
     "@types/knex": "^0.14.24",
