--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "module": "commonjs",
     "target": "es6",
     "typeRoots": ["./src/types", "./node_modules/@types"],
-    "types": ["node", "cala-globals", "koa-convert", "koa-router", "pg-rethrow"]
+    "types": ["node", "cala-globals", "koa-convert", "koa-router", "pg-rethrow", "dao"]
   },
   "include": [
     "./src/**/*"
