--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hashids": "^1.2.2",
     "knex": "^0.20.4",
     "koa": "^1.6.2",
+    "koa-compose": "^2.5.1",
     "koa-compress": "^1.0.9",
     "koa-convert": "^1.2.0",
     "koa-multer": "0.0.2",
