--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pg": "^7.12.1",
     "pg-rethrow": "1.0.1",
     "probe-image-size": "^4.0.0",
+    "promise-events": "^0.1.8",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.9.2",
