Switch API module type to CommonJS (#1240)

--- a/src/published-types/tsconfig.json
+++ b/src/published-types/tsconfig.json
@@ -6,7 +6,7 @@
   "exclude": [],
   "compilerOptions": {
     "esModuleInterop": false,
-    "module": "ESNext",
+    "module": "commonjs",
     "allowJs": false,
     "outDir": "../../published-types-dist",
     "declaration": true,
