--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.9.2",
     "typescript": "^3.7.2",
-    "xstate": "4.3.3",
-    "zipcodes": "2.1.0"
+    "xstate": "4.3.3"
   },
   "devDependencies": {
     "@cala/bin": "^2.0.0",
@@ -63,7 +62,6 @@
     "eslint-plugin-import": "^2.13.0",
     "meow": "^5.0.0",
     "nodemon": "^1.18.9",
-    "npm-run-all": "^4.1.5",
     "nyc": "^13.3.0",
     "prettier": "^2.0.5",
     "sinon": "^6.1.5",
