Target ES5 in API types to allow usage in older browsers (#1295)

--- a/src/published-types/tsconfig.json
+++ b/src/published-types/tsconfig.json
@@ -10,6 +10,7 @@
     "allowJs": false,
     "outDir": "../../published-types-dist",
     "declaration": true,
+    "target": "es5",
     "typeRoots": [],
     "types": []
   },
