[C-539] Update `master` references to `main` (#1313)
In parallel with merging this, I'll switch the base branch over and
delete `master`.

Anything I've missed? Let me know!

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
             git config --global user.email "devops@ca.la"
             git config --global user.name "CALA Machine User"
 
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+            if [ "${CIRCLE_BRANCH}" == "main" ]; then
               bin/publish staging
             elif [ "${CIRCLE_BRANCH}" == "production" ]; then
               bin/publish production
