--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "koa-compress": "^1.0.9",
     "koa-convert": "^1.2.0",
     "koa-multer": "0.0.2",
+    "koa-proxy": "^1.0.0-alpha.3",
     "koa-router": "5.4.0",
     "lodash": "^4.17.13",
     "mime-types": "^2.1.21",
@@ -52,6 +53,7 @@
     "@cala/bin": "^2.1.0",
     "@types/csv-parse": "^1.1.11",
     "@types/hashids": "^1.0.30",
+    "@types/koa-proxy": "^1.0.1",
     "@types/meow": "^5.0.0",
     "@types/sinon": "^5.0.1",
     "@types/tape": "^4.2.32",
