--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "koa-router": "5.4.0",
     "lodash": "^4.17.13",
     "mime-types": "^2.1.21",
-    "node-fetch": "1.6.3",
+    "node-fetch": "^2.6.1",
     "node-uuid": "1.4.7",
     "pg": "^7.12.1",
     "pg-rethrow": "1.0.1",
