Fixes per Andrey's onboarding pain points (#1542)
* Fixes per Andrey's onboarding pain points

- Improve error messages particularly re: findutils
- Remove `.npmrc` ?! This should remove the need for an NPM_TOKEN
  altogether as long as you're signed into npm.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,11 @@ jobs:
           keys:
           - v3-dependencies-{{ checksum "package-lock.json" }}
 
-      - run: npm ci
+      - run:
+          name: Install dependencies
+          command: |
+            bin/set_up_npmrc
+            npm ci
 
       - save_cache:
           paths:
