--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "google-libphonenumber": "2.0.9",
     "graphql-iso-date": "^3.6.1",
     "hashids": "^1.2.2",
-    "knex": "^0.20.4",
+    "knex": "^0.21.15",
     "koa": "^1.6.2",
     "koa-compose": "^2.5.1",
     "koa-compress": "^1.0.9",
@@ -46,8 +46,9 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.9.2",
-    "typescript": "^3.8.3",
-    "xstate": "4.3.3"
+    "typescript": "^4.1.3",
+    "xstate": "^4.15.4",
+    "zod": "^3.0.0-alpha.4"
   },
   "devDependencies": {
     "@cala/bin": "^2.1.0",
