--- a/src/published-types/package.json
+++ b/src/published-types/package.json
@@ -7,5 +7,8 @@
   "license": "unlicensed",
   "publishConfig": {
     "access": "restricted"
+  },
+  "dependencies": {
+    "zod": "3.0.0-alpha.4"
   }
 }
